fix(style): added gap between menu btn and logo

--- a/src/app/shared/components/nav/nav.component.scss
+++ b/src/app/shared/components/nav/nav.component.scss
@@ -13,12 +13,16 @@
   position: fixed;
   top: 0;
   z-index: 6;
+}
 
-  .container {
-    padding: 0 16px;
-    display: flex;
-    align-items: center;
-  }
+.container {
+  padding: 0 16px;
+  display: flex;
+  align-items: center;
+}
+
+.menu-btn {
+  margin-right: 8px;
 }
 
 .brand-logo-big {
